Remove bonus site engagement from notifications.

This CL removes the bonus engagement received by origins which have
notification permission.

The bonus was originally added to ensure push aggregators would have
engagement for the Budget API. Since then, interaction with
notifications now generate engagement, and this is sufficient for
accumluating engagement.

This CL means a small change to the important sites code, which
previously relied on site engagement to tell if an origin had
notification permission.

BUG=796802

Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I1b4b562039b5c1fe4ed2b420ac01f30b83ea74b7